--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <h1>Hello, world</h1>
     <p>Content goes here</p>
  
+    <!-- Button and dynamic text -->
+    <button onclick="changeText()">Click me</button>
+    <p id="dynamic-text">This text will change.</p>
+
     <!-- To link external javascript file -->
     <script src="script.js"></script>
   </body>
