made the button into a counter

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  
     <!-- Button and dynamic text -->
     <button onclick="changeText()">Click me</button>
-    <p id="dynamic-text">This text will change.</p>
+    <p id="dynamic-text">COUNTER</p>
 
     <!-- To link external javascript file -->
     <script src="script.js"></script>
